force-app/main/default/objects/Integration_Endpoint_Placeholder_Lookup__mdt/Integration_Endpoint_Placeholder_Lookup__mdt.object-meta.xml
<CustomObject>
    <description>this lookup has field mapping to replace the placeholder in the endpoint based on the triggered object</description>
    <label>Integration Endpoint Placeholder Lookup</label>
    <pluralLabel>Integration Endpoint Placeholder Lookups</pluralLabel>
</CustomObject>