force-app/main/default/objects/Integration_Endpoint_Placeholder_Lookup__mdt/fields/Endpoint_Name__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Name__c</fullName>
    <description>this is endpoint name without instance name suffixe</description>
    <inlineHelpText>this is endpoint name without instance name suffixe</inlineHelpText>
    <label>Endpoint Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>