force-app/main/default/objects/Integration_Endpoint_Placeholder_Lookup__mdt/fields/Placeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Name__c</fullName>
    <description>placeholder name in the endpoint</description>
    <label>Placeholder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>